--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,17 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- <meta
+    <meta
       name="description"
-      content="Web site created using create-react-app"
-    /> -->
+      content="React tic tac toe tutorial"
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Tic_tac_toe.svg/300px-Tic_tac_toe.svg.png" />
+    <meta property="og:title" content="React Tic Tac Toe" />
+    <meta property="og:type" content="game" />
+    <meta property="og:description" content="React tic tac toe tutorial." />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Tic_tac_toe.svg/300px-Tic_tac_toe.svg.png" />
+    <meta property="og:url" content="https://denisse-ab.github.io/react-tic-tac-toe/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- <title>React App</title> -->
+    <title>Tic Tac Toe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
