--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,12 @@
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Tic_tac_toe.svg/300px-Tic_tac_toe.svg.png" />
+    <meta name="twitter:site" content="@CodingPR" />
+    <meta name="twitter:creator" content="@83deni32" />
+    <meta name="twitter:image:alt" content="Tic Tac Toe game" />
     <meta property="og:title" content="React Tic Tac Toe" />
     <meta property="og:type" content="game" />
+    <meta property="og:site_name" content="CodingPR" />
     <meta property="og:description" content="React tic tac toe tutorial." />
     <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Tic_tac_toe.svg/300px-Tic_tac_toe.svg.png" />
     <meta property="og:url" content="https://denisse-ab.github.io/react-tic-tac-toe/" />
